# sam-ug-nx-all

./: .gitignore  README.md
.github/workflows/: build-windows.yml
docs/plans/: 2026-03-13-production-server-address-design.md  2026-03-13-production-server-address.md  2026-03-17-compiler-fallback-admin-design.md  2026-03-17-compiler-fallback-admin.md  2026-03-17-compiler-startup-login-and-candidate-design.md  2026-03-17-compiler-startup-login-and-candidate.md
qt-host/: CMakeLists.txt  resources.qrc
qt-host/.cache/clangd/index/: bridge.cpp.DEBEF628B23F7EAB.idx  bridge.h.40D2812ADED4B005.idx  main.cpp.7472AE5724A1B729.idx
qt-host/build-ninja/: CMakeCache.txt
qt-host/src/: bridge.cpp  bridge.h  compiler_account_normalizer.cpp  compiler_account_normalizer.h  main.cpp
qt-host/tests/: api_log_bridge_test.cpp  bridge_default_username_test.cpp  compiler_account_normalizer_test.cpp
qt-host/web/: index.html
web-app/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.vue  main.js
web-app/src/components/base/: BaseButton.vue  BaseCheckbox.vue  BaseDatePicker.vue  BaseDialog.vue  BaseFileTrigger.vue  BaseInput.vue  BaseSelect.vue  BaseTable.vue  base-table-utils.js  panel-toggle.js  select-filter.js
web-app/src/config/: parts-order-runtime.js
web-app/src/pages/parts-order/: index.vue
web-app/src/pages/parts-order/components/: history-tem.vue  look-process.vue  pars-craft-template.vue
web-app/src/pages/parts-order/utils/: command-bar-condense.js  compiler-options.js  craft-code.js  craft-context.js  craft-param-disable.js  detail-response.js  dict-format.js  init-load-gate.js  list-response.js  part-merge.js  part-param-diff.js  part-selection.js  process-content-options.js  row-selection.js  table-selection.js  ug-reference.js  upload-image-payload.js
web-app/src/router/: index.js
web-app/src/services/: bridge.js  compiler-startup.js  http-error.js  http.js
web-app/src/services/api/: auth.js  compiler.js  dict.js  samMesPartsOrder.js  samMoldCraftTemplate.js
web-app/src/stores/: partsOrderStore.js
web-app/src/styles/: dishvision.css
web-app/tests/: add-craft-dialog-layout.test.mjs  base-table-utils.test.mjs  command-bar-condense.test.mjs  compiler-options.test.mjs  compiler-startup.test.mjs  craft-code.test.mjs  craft-context.test.mjs  craft-param-disable.test.mjs  craft-template-api-path.test.mjs  detail-response.test.mjs  dict-format.test.mjs  http-error.test.mjs  init-load-gate.test.mjs  list-response.test.mjs  panel-toggle.test.mjs  part-merge.test.mjs  part-param-diff.test.mjs  part-selection.test.mjs  parts-order-action-confirm.test.mjs  parts-order-columns.test.mjs  parts-order-runtime.test.mjs  process-content-options.test.mjs  row-selection.test.mjs  select-filter.test.mjs  table-selection.test.mjs  ug-reference.test.mjs  upload-image-payload.test.mjs
